--- a/SimpleUI/app/src/main/res/layout/activity_main.xml
+++ b/SimpleUI/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,6 @@
         android:id="@+id/button"
         android:clickable="false"
         android:onClick="submit"
-        android:background="@drawable/button"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/radioGroup" />
@@ -48,15 +47,15 @@
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Male"
-            android:id="@+id/MaleradioButton"
-            android:checked="false" />
+            android:id="@+id/blacktradioButton"
+            android:checked="true"
+            android:text="Black Tea" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Female"
-            android:id="@+id/FemalradioButton"
-            android:checked="false" />
+            android:id="@+id/greentradioButton"
+            android:checked="false"
+            android:text="Green Tea" />
     </RadioGroup>
 </RelativeLayout>
