Drink List with Image

--- a/SimpleUI/app/src/main/res/layout/activity_drink_menu.xml
+++ b/SimpleUI/app/src/main/res/layout/activity_drink_menu.xml
@@ -9,15 +9,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.user.simpleui.DrinkMenuActivity">
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/drinkMenuListView"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="74dp" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -35,7 +26,8 @@
         android:id="@+id/doneButton"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:onClick="done()" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -44,5 +36,13 @@
         android:layout_alignParentBottom="true"
         android:layout_toRightOf="@+id/totalTextView"
         android:layout_toEndOf="@+id/totalTextView" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/drinkMenuListView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
